[build-system]
requires = ["meson-python>=0.16", "meson>=1.2", "ninja>=1.11", "numpy>=1.21"]
build-backend = "mesonpy"

[project]
name = "polan"
dynamic = ["version"]
description = "Model of Earth ionosphere true height"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license-files = ["LICENSE"]
keywords = ["ionosphere", "thermosphere"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/space-physics/polan"

[project.optional-dependencies]
tests = ["pytest", "mypy"]

[tool.mypy]
files = ["."]
