[metadata]
name = polan
version = 1.0.0
description = Model of Earth ionosphere true height
author = Michael Hirsch, Ph.D.
url = https://github.com/space-physics/polan
keywords =
  ionosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plot =
  matplotlib
